# kmr

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  Radio.md  docker-compose.proxy.yml  docker-compose.yml  package.json  tsconfig.json
.github/workflows/: release.yml
desktop-placeholder/: index.html
docs/: BUILDING.md
frontend/: app.css  app.tsx  index.html
local/: PLAN.md
packaging/windows/: kmr.iss
scripts/: build-sidecars.ts
src/: anchor.test.ts  anchor.ts  db.ts  feedback.test.ts  feedback.ts  genre.test.ts  genre.ts  graph.test.ts  graph.ts  library.ts  lyrics.test.ts  lyrics.ts  ma-client.test.ts  ma-client.ts  musicmap-client.ts  queue.test.ts  queue.ts  radio.config.ts  resolver.ts  scheduler.test.ts  scheduler.ts  scrapling_adapter.py  server.ts  track-blocks.test.ts  track-blocks.ts  types.ts  verified-resolver.test.ts  verified-resolver.ts  yt-client.test.ts  yt-client.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
