[package]
name = "kmr-desktop"
version = "1.4.0"
description = "Kaufis Metal Radio desktop shell"
authors = ["KMR contributors"]
edition = "2021"

[[bin]]
name = "kmr"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
url = "2"
